@@ -1,57 +1,47 @@
 package quiz;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public enum QuestionType {
-    ABSOLUTE_FREQUENCY("Frequenza Assoluta",
-            Arrays.asList(
-                    "Quante volte compare la parola '%s' nel documento '%s'?",
-                    "La parola '%s' compare nel documento '%s':",
-                    "La parola '%s', nel documento '%s' ha una frequenza:",
-                    "La parola '%s' compare nel documento '%s' più o meno di '%d' volte? ")),
+    ABSOLUTE_FREQUENCY(List.of(
+            "Quante volte compare la parola '%s' nel documento '%s'?",
+            "Qual è la frequenza della parola '%s' nel documento '%s'?",
+            "In quante occorrenze si trova la parola '%s' nel documento '%s'?",
+            "Quante volte è ripetuta la parola '%s' nel documento '%s'?",
+            "Conta le occorrenze della parola '%s' nel documento '%s'"
+    )),
 
-    COMPARISON("Confronto",
-            Arrays.asList(
-                    "Quale parola è più frequente tra '%s', '%s', '%s', '%s' nel documento '%s'?",
-                    "Qual è la parola più frequente nel documento '%s'?",
-                    "Quale parola è meno frequente tra '%s', '%s', '%s', '%s' nel documento '%s'?",
-                    "Qual è la parola meno frequente nel documento '%s'?")),
+    COMPARISON(List.of(
+            "Quante volte compare la parola più frequente nel documento '%s'?",
+            "Qual è la frequenza massima di una parola nel documento '%s'?",
+            "Qual è la differenza di frequenza tra '%s' e '%s' nel documento '%s'?",
+            "Quante volte in più compare '%s' rispetto a '%s' nel documento '%s'?",
+            "Qual è la somma delle frequenze di '%s' e '%s' nel documento '%s'?"
+    )),
 
-    DOCUMENT_SPECIFIC("Esclusione",
-            Arrays.asList(
-                    "Quale di queste parole non compare nel testo del documento '%s'?",
-                    "Quale parola non è presente nel testo dei vari documenti?",
-                    "La parola '%s' compare nei testi?",
-                    "Quale parola tra '%s' e '%s' è presente nel testo del documento?")),
+    DOCUMENT_SPECIFIC(List.of(
+            "In quanti documenti compare la parola '%s'?",
+            "Quante volte compare la parola '%s' nel documento dove è più frequente?",
+            "Qual è la frequenza totale della parola '%s' in tutti i documenti?",
+            "In quanti documenti la parola '%s' compare almeno 2 volte?",
+            "Qual è la frequenza media (arrotondata) della parola '%s' nei documenti dove compare?"
+    )),
 
-    EXCLUSION("Documento specifico",
-            Arrays.asList(
-                    "In quale documento compare più spesso la parola '%s'?",
-                    "In che documento è presente la parola '%s'?",
-                    "Nella totalità dei documenti, qual è il termine più ricorrente?",
-                    "In che documento non compare la parola '%s'?"));
+    EXCLUSION(List.of(
+            "Quante volte compare la parola '%s' in tutti i documenti tranne '%s'?",
+            "Qual è la frequenza della parola più comune in tutti i documenti?",
+            "Quante parole diverse compaiono almeno 3 volte nel documento '%s'?",
+            "Qual è il numero di parole uniche nel documento '%s'?",
+            "Quante volte compare complessivamente la parola meno frequente in tutti i documenti?"
+    ));
 
-    private final String type;
-    private final List<String> questionList;
+    private final List<String> questionTemplates;
 
-    QuestionType(String type, List<String> questionList) {
-        this.type = type;
-        this.questionList = questionList;
-    }
-
-    public String getType() {
-        return type;
+    QuestionType(List<String> questionTemplates) {
+        this.questionTemplates = questionTemplates;
     }
 
     public List<String> getQuestionList() {
-        return questionList;
+        return questionTemplates;
     }
-
-    public String getRandomTemplate() {
-        Collections.shuffle(questionList);
-        return questionList.get((int) (Math.random() * questionList.size()));
-    }
-
 }
